corrections and updates

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -62,8 +62,7 @@ html(lang="en")
                             div(class="col-12 col-lg-6 mb-10 mb-lg-0")
                                 div(class="mw-lg-sm mx-auto")
                                     h2(class="mb-6") Mission
-                                    p(class="lead lh-lg text-muted mb-6") Conduct a creative study on the connection between humans and the 
-                                    |       the natural world around us. Donate 10% of all proceeds to environmental causes.
+                                    p(class="lead lh-lg text-muted mb-6") Conduct a creative study on the connection between humans and the natural world around us. Donate 10% of all proceeds to environmental causes.
                             div(class="col-12 col-lg-6 position-relative")
                                 div(class="d-flex flex-column mx-auto", style="width: 296px;")
                                     div(class="d-flex justify-content-end align-items-end")
@@ -73,24 +72,23 @@ html(lang="en")
                     div(class="container")
                         div(class="mw-3xl mx-auto mb-16 text-center")
                             h2(class="mt-6 mb-4") Roadmap
-                            p(class="mw-xl mx-auto lead lh-lg text-muted") General timeline and checkpoints for the project 
-                            |       up to the completion.
+                            p(class="mw-xl mx-auto lead lh-lg text-muted") General timeline and checkpoints for the project.
                         div(class="row mb-n4")
                             div(class="col-12 col-lg-4 p-4")
                                 div(class="py-10 px-8 bg-white text-center")
                                     span(class="d-flex mx-auto mb-6 align-items-center justify-content-center h6 bg-primary text-white", style="width: 64px; height: 64px;") 1
                                     h6(class="my-6") May-September 2022
-                                    p(class="lead lh-lg text-muted") Mint the first five artworks and list them for auction. Build up the collection of work and donate to a good cause.
+                                    p(class="lead lh-lg text-muted") Mint the first five artworks, and list them for auction. Build up the collection of work and donate to a good cause.
                             div(class="col-12 col-lg-4 p-4")
                                 div(class="py-10 px-8 bg-white text-center")
                                     span(class="d-flex mx-auto mb-6 align-items-center justify-content-center h6 bg-primary text-white", style="width: 64px; height: 64px;") 2
                                     h6(class="my-6") September-October 2022
-                                    p(class="lead lh-lg text-muted") Mint 5 custom collectors edition artworks as giveaways for previous collectors and supportes.
+                                    p(class="lead lh-lg text-muted") Mint 5 custom collectors edition artworks as giveaways for previous collectors and supporters.
                             div(class="col-12 col-lg-4 p-4")
                                 div(class="py-10 px-8 bg-white text-center")
                                     span(class="d-flex mx-auto mb-6 align-items-center justify-content-center h6 bg-primary text-white", style="width: 64px; height: 64px;") 3
                                     h6(class="my-6") October-December 2022
-                                    p(class="lead lh-lg text-muted") Mint the last 5 pieces of the collection, completing the main body of artwork. As well as holiday content.
+                                    p(class="lead lh-lg text-muted") Mint the last 5 pieces of the collection, completing the main body of artwork. Create holiday content.
                             div(class="col-12 col-lg-4 p-4")
                                 div(class="py-10 px-8 bg-white text-center")
                                     span(class="d-flex mx-auto mb-6 align-items-center justify-content-center h6 bg-primary text-white", style="width: 64px; height: 64px;") 4
@@ -100,7 +98,7 @@ html(lang="en")
                                 div(class="py-10 px-8 bg-white text-center")
                                     span(class="d-flex mx-auto mb-6 align-items-center justify-content-center h6 bg-primary text-white", style="width: 64px; height: 64px;") 5
                                     h6(class="my-6") February- April 2023
-                                    p(class="lead lh-lg text-muted") Continue community engagement and marketing the project with the intention of selling out all 10 works.
+                                    p(class="lead lh-lg text-muted") Continue community engagement and marketing the project with the intention of selling out all 10 + works.
                             div(class="col-12 col-lg-4 p-4")
                                 div(class="py-10 px-8 bg-white text-center")
                                     span(class="d-flex mx-auto mb-6 align-items-center justify-content-center h6 bg-primary text-white", style="width: 64px; height: 64px;") 6
@@ -120,28 +118,25 @@ html(lang="en")
                                         |       and Graphic Designer Pixel Reviver
                                         |       or you can call him Danny.
                                     div(class="col-12 col-lg-6")
-                                        img(class="mb-5 img-fluid h-100", style="object-fit: cover;", src="images/Selfie.JPG", alt="")
+                                        img(class="mb-5 img-fluid h-100", style="object-fit: cover;", src="images/Selfie-2.jpg", alt="")
                             div(class="col-12 col-lg-auto ms-lg-8")               
                             |             
                 section(class="py-20")
                     div(class="container")
-                        div(class="row justify-content-between pb-6 pb-md-12 border-bottom")
-                            div(class="col-12 col-lg-auto")
-                                a(class="d-inline-block mb-8 mb-lg-0 navbar-brand", href="#index.html")
-                                    img(src="images/Biomes-Logo-01-01.svg", alt="", width="200")
-                        div(class="d-flex flex-wrap justify-content-between align-items-center pt-12")
-                            p(class="small mb-6 mb-sm-0") All rights reserved | Biomes NFT 2022
-                            div
-                                a(class="link-dark text-decoration-none me-4", href="#")                 
-                                |               
-                                a(class="link-dark text-decoration-none me-4", href="#https://twitter.com/PixelReviver")
-                                    img(src="cronos-assets/logos/brands/twitter.svg", alt="")
-                                |               
-                                a(class="link-dark text-decoration-none me-4", href="#https://www.tiktok.com/t/ZTdEDy6WS/")
-                                    img(src="images/TikTok-Logo-01.svg", alt="", class="width")
-                                |               
-                                a(class="link-dark text-decoration-none me-4", href="#")                 
-                                |               
-                                a(class="link-dark text-decoration-none me-4", href="#")                 
+                        div(class="row justify-content-between align-items-center")
+                            div(class="col-12 col-lg-4 mb-8 mb-lg-0")
+                                a(class="d-block navbar-brand", href="#")
+                                    img(src="images/Biomes-Logo-01-01.svg", alt="", width="100", class="width")
+                                p(class="d-none d-lg-block mt-8 mb-0 small text-muted") All rights reserved | Biomes NFT 2022
+                            div(class="col-12 col-lg-8")
+                                ul(class="list-unstyled mb-0 d-flex flex-wrap align-items-center justify-content-center justify-content-lg-end")
+                                    li(class="mb-5 mb-lg-0 me-6 me-lg-12")
+                                        a(class="small link-dark text-decoration-none fw-bold", href="https://twitter.com/PixelReviver") Twitter
+                                    li(class="mb-5 mb-lg-0 me-6 me-lg-12")
+                                        a(class="small link-dark text-decoration-none fw-bold", href="https://www.tiktok.com/t/ZTdEbhDbh/") TikTok
+                                    li(class="mb-5 mb-lg-0 me-6 me-lg-12")                 
+                                    li(class="mb-5 mb-lg-0 me-6 me-lg-12")                 
+                                    li(class="mb-5 mb-lg-0")               
+                                p(class="d-lg-none small mt-6 text-muted text-center") All rights reserved | Biomes NFT 2022
         script(src="js/bootstrap/bootstrap.bundle.min.js")
         script(src="js/main.js")
